--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@fontsource/inter": "^5.2.6",
     "@xenova/transformers": "^2.7.0",
+    "@huggingface/transformers": "3.5.0",
+    "wavefile": "^11.0.0",
     "axios": "^1.10.0",
     "@headlessui/react": "^1.7.13",
     "react": "^18.2.0",
